# Qt_DB

./: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
